# Rust-numerical-library

./: README.md  new_method.ipynb  vtk_js_test_origin.ipynb  未命名.ipynb
.ipynb_checkpoints/: new_method-checkpoint.ipynb  vtk_js_test_origin-checkpoint.ipynb  未命名-checkpoint.ipynb
Numerical-Lib/: Cargo.toml  asmout.s  build.rs
Numerical-Lib/src/: double.c  lib.rs  main.c  main.rs  main的副本.rs
Numerical-Lib/src/.ipynb_checkpoints/: learn_json-checkpoint.ipynb  new_method-checkpoint.ipynb
