[package]
name = "numerical_lib"
version = "0.1.0"
authors = ["Yuhang Ying <yuhang_ying@qq.com>"]
edition = "2018"
build = "build.rs"
links = "hello"

[dependencies]
packed_simd = "0.3.3"
rand = "0.3.17"
time = "0.1"
libc = "0.2.0"
rayon = "1.3.1"
cfg = "0.5.0"
rustc-cfg = "0.4.0"

[build-dependencies]
cc = "1.0.58"